2009-11-12  Daniel Bates  <dbates@webkit.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=30291

        Fixes an issue where the returned drop effect is incorrect when
        effectAllowed == "uninitialized".

        According to section 7.9.2 of the HTML 5 spec.
        <http://dev.w3.org/html5/spec/Overview.html#the-dragevent-and-datatransfer-interfaces>
        when effectAllowed = "uninitialized" the resulting dropEffect should be the
        user-specified dropEffect (i.e. "copy", "move", "link") and "none" for any
        other case.
        
        No test cases are included because we have an existing test case from
        bug #24731.

        * dom/Clipboard.cpp:
        (WebCore::dragOpFromIEOp): Added case for op == "uninitialized".
2009-11-12  Daniel Bates  <dbates@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=30291

        Rebased results for existing test case fast/events/drag-and-drop.html
        from bug #24731.

        Now, we can run the part of the test when effectAllowed == "uninitialized". 

        * fast/events/drag-and-drop-expected.txt: Rebased results.
        * fast/events/drag-and-drop.html: Removed notice about this bug (#30291).


git-svn-id: svn://svn.chromium.org/blink/trunk@50888 bbb929c8-8fbe-4397-9dbb-9b2b20218538